btre_final_k8s/btre-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: btre-deployment
  labels:
    app: btre
spec:
  replicas: 1
  selector:
    matchLabels:
      app: btre
  template:
    metadata:
      labels:
        app: btre
    spec:
      containers:
      - name: btre-container
        imagePullPolicy: IfNotPresent
        image: imlabeeb/k8s:v4
        command: ["gunicorn", "btre.wsgi:application", "--bind" ,"0.0.0.0:8000"]
        ports:
        - containerPort: 8000
      # imagePullSecrets:
      # - name: regcred
        resources:
          limits:
            memory: 128Mi
            cpu: "0.4"
          requests:
            memory: 64Mi
            cpu: "0.2" 
---
kind: Service
apiVersion: v1
metadata:
  name:  btre-service
spec:
  selector:
    app:  btre
  ports:
  - port: 9000
    targetPort: 8000
  type:  LoadBalancer
